--- a/Desktop/View/Page1.xaml
+++ b/Desktop/View/Page1.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="Window1" Height="612" Width="800"
+        Title="Page1" Height="612" Width="800"
         Opacity="1">
     
     <Grid>
