--- a/Desktop/View/Page2.xaml
+++ b/Desktop/View/Page2.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="Window2" Height="600" Width="800"
+        Title="Page2" Height="600" Width="800"
         Opacity="1">
     
     <Grid>
