--- a/Desktop/View/Page3.xaml
+++ b/Desktop/View/Page3.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="Window3" Height="600" Width="800"
+        Title="Page3" Height="600" Width="800"
         Opacity="1">
     <Grid Background="#FFD9D9D9" Margin="0,0,0,0">
         <Label Content="Название" HorizontalAlignment="Left" Margin="35,33,0,0" VerticalAlignment="Top" Height="43" Width="109" FontSize="20" FontFamily="Arial Nova"/>
