--- a/Desktop/View/Page4.xaml
+++ b/Desktop/View/Page4.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="Window4" Height="600" Width="1000"
+        Title="Page4" Height="600" Width="1000"
         Opacity="1">
     <Grid>
 
